// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Graphviz /> matches expected snapshot 1`] = `
<body>
  <div>
    <div
      id="graphviz0"
    >
      <svg
        height="500"
        viewBox="0.00 0.00 62.00 116.00"
        width="500"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        

        <g
          class="graph"
          id="graph0"
          transform="scale(1 1) rotate(0) translate(4 112)"
        >
          

          <title>
            %0
          </title>
          

          <polygon
            fill="#ffffff"
            points="-4,4 -4,-112 58,-112 58,4 -4,4"
            stroke="transparent"
          />
          

          <!-- a -->
          

          <g
            class="node"
            id="node1"
          >
            

            <title>
              a
            </title>
            

            <ellipse
              cx="27"
              cy="-90"
              fill="none"
              rx="27"
              ry="18"
              stroke="#000000"
            />
            

            <text
              fill="#000000"
              font-family="Times,serif"
              font-size="14.00"
              text-anchor="middle"
              x="27"
              y="-85.8"
            >
              a
            </text>
            

          </g>
          

          <!-- b -->
          

          <g
            class="node"
            id="node2"
          >
            

            <title>
              b
            </title>
            

            <ellipse
              cx="27"
              cy="-18"
              fill="none"
              rx="27"
              ry="18"
              stroke="#000000"
            />
            

            <text
              fill="#000000"
              font-family="Times,serif"
              font-size="14.00"
              text-anchor="middle"
              x="27"
              y="-13.8"
            >
              b
            </text>
            

          </g>
          

          <!-- a&#45;&#45;b -->
          

          <g
            class="edge"
            id="edge1"
          >
            

            <title>
              a--b
            </title>
            

            <path
              d="M27,-71.8314C27,-61 27,-47.2876 27,-36.4133"
              fill="none"
              stroke="#000000"
            />
            

          </g>
          

        </g>
        

      </svg>
    </div>
  </div>
</body>
`;

exports[`<Graphviz /> matches expected snapshot 2`] = `
<div>
  <div
    id="graphviz0"
  >
    <svg
      height="500"
      viewBox="0.00 0.00 62.00 116.00"
      width="500"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      

      <g
        class="graph"
        id="graph0"
        transform="scale(1 1) rotate(0) translate(4 112)"
      >
        

        <title>
          %0
        </title>
        

        <polygon
          fill="#ffffff"
          points="-4,4 -4,-112 58,-112 58,4 -4,4"
          stroke="transparent"
        />
        

        <!-- a -->
        

        <g
          class="node"
          id="node1"
        >
          

          <title>
            a
          </title>
          

          <ellipse
            cx="27"
            cy="-90"
            fill="none"
            rx="27"
            ry="18"
            stroke="#000000"
          />
          

          <text
            fill="#000000"
            font-family="Times,serif"
            font-size="14.00"
            text-anchor="middle"
            x="27"
            y="-85.8"
          >
            a
          </text>
          

        </g>
        

        <!-- b -->
        

        <g
          class="node"
          id="node2"
        >
          

          <title>
            b
          </title>
          

          <ellipse
            cx="27"
            cy="-18"
            fill="none"
            rx="27"
            ry="18"
            stroke="#000000"
          />
          

          <text
            fill="#000000"
            font-family="Times,serif"
            font-size="14.00"
            text-anchor="middle"
            x="27"
            y="-13.8"
          >
            b
          </text>
          

        </g>
        

        <!-- a&#45;&#45;b -->
        

        <g
          class="edge"
          id="edge1"
        >
          

          <title>
            a--b
          </title>
          

          <path
            d="M27,-71.8314C27,-61 27,-47.2876 27,-36.4133"
            fill="none"
            stroke="#000000"
          />
          

        </g>
        

      </g>
      

    </svg>
  </div>
</div>
`;
